--- a/src/_Components/_Pages/0.LoginPage/Sub_Components/SignInForm/SignInForm.scss
+++ b/src/_Components/_Pages/0.LoginPage/Sub_Components/SignInForm/SignInForm.scss
@@ -26,6 +26,10 @@
                     margin-right: 1rem;
                 }
                 font-weight: 600;
+                a{
+                    text-decoration: none;
+                    color: #fff;
+                }
             }
             &:nth-of-type(1){
                 .social-btn{
@@ -34,6 +38,9 @@
                         border: 2px solid #cf4332;
                         color: #cf4332;
                         background-color: #fff;
+                        a{
+                            color: #cf4332;
+                        }
                     }
                 }
             }
@@ -44,6 +51,9 @@
                         border: 2px solid #3c66c4;
                         color: #3c66c4;
                         background-color: #fff;
+                        a{
+                            color: #3c66c4;
+                        }
                     }
                 }
             }
@@ -64,6 +74,7 @@
             border: 2px solid #12d021;
             background-color: transparent;
             color: #fff;
+
         }
     }
 }
