--- a/src/_Components/_General_Style/SASS/_CrossBrowser.scss
+++ b/src/_Components/_General_Style/SASS/_CrossBrowser.scss
@@ -18,3 +18,8 @@
     -ms-border-radius: $radius !important;
     -o-border-radius: $radius !important;
 }
+
+@mixin animation($animation){
+    animation: $animation;
+    -webkit-animation: $animation;
+}
