MAIN STYLE FINISHED

--- a/src/_Components/_General_Style/SASS/_CrossBrowser.scss
+++ b/src/_Components/_General_Style/SASS/_CrossBrowser.scss
@@ -23,3 +23,11 @@
     animation: $animation;
     -webkit-animation: $animation;
 }
+
+@mixin transition($transition){
+    transition: $transition;
+    -webkit-transition: $transition;
+    -moz-transition: $transition;
+    -ms-transition: $transition;
+    -o-transition: $transition;
+}
