--- a/src/_Components/_Pages/1.MainPage/Sub_Components/SideBar/SideBar.scss
+++ b/src/_Components/_Pages/1.MainPage/Sub_Components/SideBar/SideBar.scss
@@ -67,5 +67,8 @@
             font-size: 1.5rem;
             color: white;
         }
+        .chat{
+            color: white;
+        }
     }
 }
