--- a/src/_Components/_Pages/1.MainPage/MainPage.scss
+++ b/src/_Components/_Pages/1.MainPage/MainPage.scss
@@ -7,6 +7,7 @@
         .col-md-4{
             padding: 0;
             border-right: 1px solid black;
+            position: relative;
         }
         .col-md-8{
             padding: 0;
