--- a/src/_Components/_Pages/1.MainPage/Sub_Components/ChatBox/ChatBox.scss
+++ b/src/_Components/_Pages/1.MainPage/Sub_Components/ChatBox/ChatBox.scss
@@ -24,7 +24,7 @@
     .chatbox-ui{
         width: 100%;
         height: 100%;
-        .chat{
+        .chat-container{
             width: 100%;
             height: 90%;
             .header{
@@ -66,6 +66,9 @@
                 background-color: #262D31;
                 height: calc(100% - 10.5%);
                 overflow-y: auto;
+                .message{
+                    color: #fff;
+                }
                 .no-messages{
                     width: 100%;
                     text-align: center;
