--- a/src/_Components/_Pages/1.MainPage/Sub_Components/SideBar/Sub_Components/Archived/Archived.scss
+++ b/src/_Components/_Pages/1.MainPage/Sub_Components/SideBar/Sub_Components/Archived/Archived.scss
@@ -1,5 +1,5 @@
 @import '../../../../../../_General_Style/SASS/All';
-.contact-list{
+.archive{
     height:100%;
     width:100%;
     position: absolute;
@@ -7,11 +7,10 @@
     background-color:#131c21;
     z-index: 10;
     @include transition(margin-left .3s ease-in-out);
-    .searchbar{
-        @include searchBar();
-    }
-    .contacts{
-        height: calc(100% - 28vh);
+    .archive-list{
+        width: 100%;
+        height: 80vh;
         overflow-y: auto;
+        
     }
 }
