--- a/src/_Components/_Pages/1.MainPage/Sub_Components/SideBar/Sub_Components/Chat/Chat.scss
+++ b/src/_Components/_Pages/1.MainPage/Sub_Components/SideBar/Sub_Components/Chat/Chat.scss
@@ -30,5 +30,9 @@
         p{
             margin: 0;
         }
+        p:nth-of-type(2){
+            font-size: .8rem;
+            color: rgba(255, 255, 255, .5);
+        }
     }
 }
