--- a/src/_Components/_Pages/1.MainPage/Sub_Components/SideBar/Sub_Components/OptionsDropDown/OptionsDropDown.scss
+++ b/src/_Components/_Pages/1.MainPage/Sub_Components/SideBar/Sub_Components/OptionsDropDown/OptionsDropDown.scss
@@ -9,7 +9,7 @@
     color: #fff;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
     font-weight: 500;
-    box-shadow: 0px 0px 5px 1px black;
+    box-shadow: 0px 0px 3px black;
     @include bordered(2px);
     &:hover{
         color: #fff;
