--- a/src/_Components/_Pages/1.MainPage/Sub_Components/SideBar/Sub_Components/3.Profile/ProfileEdit.scss
+++ b/src/_Components/_Pages/1.MainPage/Sub_Components/SideBar/Sub_Components/3.Profile/ProfileEdit.scss
@@ -1,41 +1,13 @@
-.Header {
-  padding-right: 20px;
-  padding-left: 23px;
-  background-color: #00bfa5;
-  z-index: 200;
-  box-sizing: border-box;
-  display: flex;
-  flex: none;
-  flex-direction: column;
-  justify-content: flex-end;
-  height: 10vh;
-  color: white;
-}
-.HeaderContent{
-        display: flex;
-        flex: none;
-        align-items: center;
-        width: 100%;
-        height: 59px;
-        background-color: initial;
-        text-align: initial;
-}
-.HeaderText{
-        flex-grow: 1;
-        overflow: hidden;
-        font-size: 19px;
-        line-height: normal;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        margin-top: -3px;
-        font-weight: 500;
-}
-.BackIconDiv{
-    width: 53px;
-}
-.BackIcon{
-    width: 24px;
-    height: 41px;
+@import '../../../../../../_General_Style/SASS/All';
+.ProfileEdit{
+  height:100%;
+  width:100%;
+  position: absolute;
+  top: 0;
+  background-color:#131c21;
+  color:white;
+  z-index: 10;
+  @include transition(margin-left .3s ease-in-out);
 }
 .EditPage {
   position: relative;
@@ -46,7 +18,6 @@
   overflow-x: hidden;
   overflow-y: auto;
   opacity: 1;
-  background-color: #ededed;
   height: 90vh;
 }
 .ProfilePicDiv {
@@ -83,8 +54,8 @@
 }
 .NameDiv {
   margin-bottom: 10px;
-  background-color: white;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08);
+  background-color: #1a272e;
+  box-shadow: 0 1px 3px black;
   padding: 14px 30px 10px;
 }
 .NameHeader {
@@ -129,12 +100,12 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
-  color: rgba(0, 0, 0, 0.45);
+  color: rgba(255, 255, 255, 0.45);
 }
 .BioDiv{
         margin-bottom: 10px;
-        background-color: white;
-        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08);
+        background-color: #1a272e;
+        box-shadow: 0 1px 3px rgb(0, 0, 0);
         padding: 14px 30px 10px;
 }
 .BioHeader{
@@ -163,7 +134,8 @@
     overflow: hidden;
 }
 .MuiInputBase-input{
-  width: 100vw;
+  width: 100vw !important;
+  color: white !important;
 }
 a {
 	color: White;
