--- a/src/_Components/_Pages/1.MainPage/Sub_Components/ChatBox/ChatBox.scss
+++ b/src/_Components/_Pages/1.MainPage/Sub_Components/ChatBox/ChatBox.scss
@@ -1,7 +1,8 @@
 @import '../../../../_General_Style/SASS/All';
 #chatbox{
     width: 100%;
-    height: 100%;
+    height: 100vh;
+    overflow: hidden;
     .no-chat{
         width: 100%;
         height: 100%;
@@ -23,10 +24,10 @@
     }
     .chatbox-ui{
         width: 100%;
-        height: 100%;
+        height: 100vh;
         .chat-container{
             width: 100%;
-            height: 90%;
+            height: 90vh;
             .header{
                 width: 100%;
                 height: 70px;
@@ -62,13 +63,11 @@
                 }
             }
             .message-list{
-                padding: 5px 2rem;
+                width: 100%;
+                padding: 1rem 2rem;
                 background-color: #262D31;
-                height: calc(100% - 10.5%);
+                height: calc(100vh - 20vh );
                 overflow-y: auto;
-                .message{
-                    color: #fff;
-                }
                 .no-messages{
                     width: 100%;
                     text-align: center;
@@ -78,7 +77,7 @@
         }
         .input-sender{
             width: 100%;
-            height: 10%;
+            height: 10vh;
             background-color: #1E2428;
             color: rgba(255, 255, 255, .6);
             @include flexCentered(row, space-evenly, center);
