--- a/src/_Components/_Pages/1.MainPage/Sub_Components/SideBar/SideBar.scss
+++ b/src/_Components/_Pages/1.MainPage/Sub_Components/SideBar/SideBar.scss
@@ -37,5 +37,20 @@
         background-color: #131C21;
         width: 100%;
         overflow-y: auto;
+        .chat{
+            .chat-details{
+                position: relative;
+                &:hover{
+                    i{opacity: 1;}
+                }
+                i{
+                    position: absolute;
+                    right: 1rem;
+                    bottom: 1rem;
+                    opacity: 0;
+                    z-index: 5;
+                }
+            }
+        }
     }
 }
