--- a/src/_Components/_Pages/1.MainPage/Sub_Components/SideBar/Sub_Components/NewGroupChat/NewGroupChat.scss
+++ b/src/_Components/_Pages/1.MainPage/Sub_Components/SideBar/Sub_Components/NewGroupChat/NewGroupChat.scss
@@ -8,7 +8,7 @@
     z-index: 10;
     @include transition(margin-left .3s ease-in-out);
     .searchbar{
-        height: 8vh;
+        height: 15vh;
         padding-bottom: 1rem;
         input{
             width: calc(100% - 1.5rem);
@@ -21,8 +21,32 @@
             background-color: transparent;
         }
     }
+    .members-in{
+        height: 15vh;
+        padding: 1rem;
+        border-bottom: 1px solid rgba(255, 255, 255, .1);
+        .group-member{
+            @include bordered(9999px);
+            padding: 2px 10px;
+            font-size: .9rem;
+            border: 1px solid rgba(0, 0, 0, .3);
+            background-color:#e4e6e7;
+            margin: 2px;
+            outline: none;
+        }
+    }
     .contacts{
         height: calc(100% - 28vh);
         overflow-y: auto;
+    }
+    .create-group-chat{
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 50px;
+        background-color: #00BFA5;
+        border: none;
+        font-weight: 600;
+        color: #fff;
     }
 }
